Added a modal box to disable contact form and inform users that it is under construction

--- a/contact.html
+++ b/contact.html
@@ -51,6 +51,23 @@
                 </div>
             </div>
         </div>
+        <!-- The Modal -->
+        <div class="modal" id="myModal">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+      
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="col-12 modal-title text-center">Sorry for the inconvenience!</h4>
+                    </div>
+            
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <center>Our contact forms are still under construction. In the meantime, please email us at <b>dance_club@lists.rpi.edu</b>. Thank you!</center>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="contact-form">
             <center>
             <form id="contact-form" action="contact-form-handler.php" method="POST">
