Added color to the words beginner/intermediate/advanced to put more emphasis on them

--- a/class_desc.html
+++ b/class_desc.html
@@ -59,14 +59,14 @@
                         <div id="desc_text">
                             <div id="italic-text"><i>Instructor: Robin Gifford</i></div><br>
                             Both the beginner and advanced ballet classes begin with exercises at the barre and then move to center for combinations that incorporate the movements practiced at barre in a more performance oriented fashion.<br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#9733;<i>Beginner:</i> Perfect for those who have no prior ballet training. More advanced students are also welcome.<br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#9733;<i>Intermediate/Advanced:</i> A class for students who have prior ballet experience, or have taken the beginner class at RPI.</div><br>
+                            <div id="beg-adv">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#9733;<i>Beginner:</i></div> Perfect for those who have no prior ballet training. More advanced students are also welcome.<br>
+                            <div id="beg-adv">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#9733;<i>Intermediate/Advanced:</i></div> A class for students who have prior ballet experience, or have taken the beginner class at RPI.</div><br>
                         <h5><b>HIP HOP</b></h5>
                         <div id="desc_text">
                             <div id="italic-text"><i>Instructor: Sean J. Iacopelli</i></div><br>
                             This class will introduce students to the history of Hip Hop culture with basic moves and original choreography in order to build stamina and increase musicality. Each class begins with a warm up and stretch followed by across the floor and a short combo set to hip hop music. Each class will focus on different hip hop styles, breaking, dancehall, and traditional hip hop moves to develop body balance and coordination.<br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#9733;<i>Beginner:</i> No previous experience necessary just a willingness to have fun and let go!<br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#9733;<i>Intermediate/Advanced:</i> This class moves at a faster pace than beginner hip hop and dancers are encouraged to have an intermediate to advanced background.</div><br>
+                            <div id="beg-adv">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#9733;<i>Beginner:</i></div> No previous experience necessary just a willingness to have fun and let go!<br>
+                            <div id="beg-adv">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#9733;<i>Intermediate/Advanced:</i></div> This class moves at a faster pace than beginner hip hop and dancers are encouraged to have an intermediate to advanced background.</div><br>
                         <h5><b>PRE-POINTE AND VARIATIONS</b></h5>
                         <div id="desc_text">
                             <div id="italic-text"><i>Instructor: Rachel Toups</i></div><br>
