Added mailto links and an escape button from the contact us page modal box

--- a/eboard.html
+++ b/eboard.html
@@ -68,7 +68,7 @@
                             <i>President</i><br></div>
                             <div id="off-desc">
                                 Hannah is a 4th-year PhD Student majoring in Computer Science. Her favorite styles of dance are ballet and lyrical. She has been dancing for six years.<br>
-                                <i>&#9733; Email: delosh@rpi.edu</i>
+                                <i>&#9733; Email: <a href="mailto:delosh@rpi.edu">delosh@rpi.edu</a></i>
                             </div>
                     </div>
                 </div>
@@ -89,7 +89,7 @@
                             <i>Showrunner</i><br></div>
                             <div id="off-desc">
                                 Anika is a sophomore this year majoring in math major with minors in both finance and management. Her favorite style of dance is hiphop, but she also loves ballet, contemporary, and jazz. She has been dancing for twelve years.<br>
-                                <i>&#9733; Email: strela@rpi.edu</i>
+                                <i>&#9733; Email: <a href="mailto:strela@rpi.edu">strela@rpi.edu</a></i>
                             </div>
                     </div>
                 </div>
@@ -110,7 +110,7 @@
                             <i>Treasurer</i><br></div>
                             <div id="off-desc">
                                 Larissa is a sophomore majoring in Physics. Her favorite styles of dance are jazz, contemporary, and ballet. She has been dancing for one year.<br>
-                                <i>&#9733; Email: henscl@rpi.edu</i>
+                                <i>&#9733; Email: <a href="mailto:henscl@rpi.edu">henscl@rpi.edu</a></i>
                             </div>
                     </div>
                 </div>
@@ -131,7 +131,7 @@
                             <i>Webmaster</i><br></div>
                             <div id="off-desc">
                                 Erica is a junior majoring in Computer Science. Her favorite styles of dance are hip hop and contemporary. She has been dancing for six years.<br>
-                                <i>&#9733; Email: bertoe@rpi.edu</i>
+                                <i>&#9733; Email: <a href="mailto:bertoe@rpi.edu">bertoe@rpi.edu</a></i>
                             </div> 
                     </div>
                 </div>
