Switched the times for tap and pre-pointe

--- a/class_desc.html
+++ b/class_desc.html
@@ -50,31 +50,37 @@
                         <h5><b>JAZZ</b></h5>
                         <div id="desc_text">
                             <div id="italic-text"><i>Instructor: Robin Gifford</i></div><br>
-                            Jazz uses a base of ballet technique and then layers it with traditional jazz movements. These movements include kicks, leaps, and turns. The class structure is usually a warm up with stretching and strengthening exercises followed by across-the-floor progressions and combinations.</div><br>
+                            Jazz uses a base of ballet technique and then layers it with traditional jazz movements. These movements include kicks, leaps, and turns. The class structure is usually a warm up with stretching and strengthening exercises followed by across-the-floor progressions and combinations.
+                        </div><br>
                         <h5><b>CONTEMPORARY BALLET</b></h5>
                         <div id="desc_text">
                             <div id="italic-text"><i>Instructor: Robin Gifford</i></div><br>
-                            Contemporary Ballet is a mix of classical ballet and modern dance. It adapts ballet choreography to today by allowing a greater range of movement than the strict body lines of traditional ballet. This class starts off with a warm up of classical ballet and then combines it with modern dance to move the body in a variety of ways. The dances in this class combine emotions, technique, and the use of space for a beautiful end result.</div><br>
+                            Contemporary Ballet is a mix of classical ballet and modern dance. It adapts ballet choreography to today by allowing a greater range of movement than the strict body lines of traditional ballet. This class starts off with a warm up of classical ballet and then combines it with modern dance to move the body in a variety of ways. The dances in this class combine emotions, technique, and the use of space for a beautiful end result.
+                        </div><br>
                         <h5><b>BALLET</b></h5>
                         <div id="desc_text">
                             <div id="italic-text"><i>Instructor: Robin Gifford</i></div><br>
                             Both the beginner and advanced ballet classes begin with exercises at the barre and then move to center for combinations that incorporate the movements practiced at barre in a more performance oriented fashion.<br>
                             <div id="beg-adv">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#9733;<i>Beginner:</i></div> Perfect for those who have no prior ballet training. More advanced students are also welcome.<br>
-                            <div id="beg-adv">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#9733;<i>Intermediate/Advanced:</i></div> A class for students who have prior ballet experience, or have taken the beginner class at RPI.</div><br>
+                            <div id="beg-adv">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#9733;<i>Intermediate/Advanced:</i></div> A class for students who have prior ballet experience, or have taken the beginner class at RPI.
+                        </div><br>
                         <h5><b>HIP HOP</b></h5>
                         <div id="desc_text">
                             <div id="italic-text"><i>Instructor: Sean J. Iacopelli</i></div><br>
                             This class will introduce students to the history of Hip Hop culture with basic moves and original choreography in order to build stamina and increase musicality. Each class begins with a warm up and stretch followed by across the floor and a short combo set to hip hop music. Each class will focus on different hip hop styles, breaking, dancehall, and traditional hip hop moves to develop body balance and coordination.<br>
                             <div id="beg-adv">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#9733;<i>Beginner:</i></div> No previous experience necessary just a willingness to have fun and let go!<br>
-                            <div id="beg-adv">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#9733;<i>Intermediate/Advanced:</i></div> This class moves at a faster pace than beginner hip hop and dancers are encouraged to have an intermediate to advanced background.</div><br>
-                        <h5><b>PRE-POINTE AND VARIATIONS</b></h5>
-                        <div id="desc_text">
-                            <div id="italic-text"><i>Instructor: Rachel Toups</i></div><br>
-                            Pre-pointe is a 1 hour ballet class that focuses on strengthening in preparation for pointe work. Even if you do not intend to go on pointe, it is still important to have strong ankles for regular ballet. Please do not go out and buy pointe shoes for this class, it is very dangerous without the proper training. If you already own pointe shoes and have trained in them before, you may wear them, otherwise please wear flat shoes.</div><br>
+                            <div id="beg-adv">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#9733;<i>Intermediate/Advanced:</i></div> This class moves at a faster pace than beginner hip hop and dancers are encouraged to have an intermediate to advanced background.
+                        </div><br>
                         <h5><b>TAP</b></h5>
                         <div id="desc_text">
                             <div id="italic-text"><i>Instructor: Gina Grasso</i></div><br>
-                            Tap is based on tap shoes, which have a thick metal on the bottom that's used to make unique sounds. Students will learn coordination and terminology and then apply rhythm into a tap routine. The class will have a warm-up to properly loosen the ankles and knees and then move into center floor work.</div><br>
+                            Tap is based on tap shoes, which have a thick metal on the bottom that's used to make unique sounds. Students will learn coordination and terminology and then apply rhythm into a tap routine. The class will have a warm-up to properly loosen the ankles and knees and then move into center floor work.
+                        </div><br>
+                        <h5><b>PRE-POINTE AND VARIATIONS</b></h5>
+                        <div id="desc_text">
+                            <div id="italic-text"><i>Instructor: Rachel Toups</i></div><br>
+                            Pre-pointe is a 1 hour ballet class that focuses on strengthening in preparation for pointe work. Even if you do not intend to go on pointe, it is still important to have strong ankles for regular ballet. Please do not go out and buy pointe shoes for this class, it is very dangerous without the proper training. If you already own pointe shoes and have trained in them before, you may wear them, otherwise please wear flat shoes.
+                        </div><br>
                     </div>
                 </div>
             </div>        
