Forgot to update the mailto text

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
                     <br>
                     <br>
                     <h2>HAVE ANY QUESTIONS?</h2>
-                    <h5>Send us a message with the form below, <br>or shoot us an email at <b><a href="mailto:dance_club@union.lists.rpi.edu">dance_club@lists.rpi.edu</a>!</b></h5>
+                    <h5>Send us a message with the form below, <br>or shoot us an email at <b><a href="mailto:dance_club@union.lists.rpi.edu">dance_club@union.lists.rpi.edu</a>!</b></h5>
                 </div>
             </div>
         </div>
@@ -63,7 +63,7 @@
             
                     <!-- Modal body -->
                     <div class="modal-body">
-                        <center>Our contact forms are still under construction. In the meantime, please email us at <b><a href="mailto:dance_club@union.lists.rpi.edu">dance_club@lists.rpi.edu</a></b>. Thank you!</center><br>
+                        <center>Our contact forms are still under construction. In the meantime, please email us at <b><a href="mailto:dance_club@union.lists.rpi.edu">dance_club@union.lists.rpi.edu</a></b>. Thank you!</center><br>
                         <center><a href="index.html" class="btn btn-primary" role="button">Go Back to Home</a></center>
                     </div>
                 </div>
