Updated the contact us page to not have the contact form

--- a/contact.html
+++ b/contact.html
@@ -46,30 +46,31 @@
                     <br>
                     <br>
                     <br>
-                    <h2>HAVE ANY QUESTIONS?</h2>
-                    <h5>Send us a message with the form below, <br>or shoot us an email at <b><a href="mailto:dance_club@union.lists.rpi.edu">dance_club@union.lists.rpi.edu</a>!</b></h5>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <h1>&#9733; HAVE ANY QUESTIONS? &#9733;</h1>
+                    <br>
+                    <h5>Shoot us an email at <b><a href="mailto:dance_club@union.lists.rpi.edu">dance_club@union.lists.rpi.edu</a>!</b></h5>
+                    <h5>We will get back to you as soon as we can!</h5>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
                 </div>
             </div>
         </div>
-        <!-- The Modal -->
-        <div class="modal" id="myModal">
-            <div class="modal-dialog modal-lg">
-                <div class="modal-content">
-      
-                    <!-- Modal Header -->
-                    <div class="modal-header">
-                        <h4 class="col-12 modal-title text-center">Sorry for the inconvenience!</h4>
-                    </div>
-            
-                    <!-- Modal body -->
-                    <div class="modal-body">
-                        <center>Our contact forms are still under construction. In the meantime, please email us at <b><a href="mailto:dance_club@union.lists.rpi.edu">dance_club@union.lists.rpi.edu</a></b>. Thank you!</center><br>
-                        <center><a href="index.html" class="btn btn-primary" role="button">Go Back to Home</a></center>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="contact-form">
+        <!-- <div class="contact-form">
             <center>
             <form id="contact-form" action="contact-form-handler.php" method="POST">
                 <input name="name" type="text" class="form-control" placeholder="Your Name" required>
@@ -84,7 +85,7 @@
                 <br>
             </form>
             </center>
-        </div>
+        </div> -->
         <footer>
             <center>Copyright &#169; 2019 RPI Dance Club ~ Photos by Demetrius Green</center>
         </footer>
