Added Rachel's profile and changed the name of Pre-Pointe to Variations

--- a/class_desc.html
+++ b/class_desc.html
@@ -76,10 +76,10 @@
                             <div id="italic-text"><i>Instructor: Gina Grasso</i></div><br>
                             Tap is based on tap shoes, which have a thick metal on the bottom that's used to make unique sounds. Students will learn coordination and terminology and then apply rhythm into a tap routine. The class will have a warm-up to properly loosen the ankles and knees and then move into center floor work.
                         </div><br>
-                        <h5><b>PRE-POINTE AND VARIATIONS</b></h5>
+                        <h5><b>VARIATIONS</b></h5>
                         <div id="desc_text">
                             <div id="italic-text"><i>Instructor: Rachel Toups</i></div><br>
-                            Pre-pointe is a 1 hour ballet class that focuses on strengthening in preparation for pointe work. Even if you do not intend to go on pointe, it is still important to have strong ankles for regular ballet. Please do not go out and buy pointe shoes for this class, it is very dangerous without the proper training. If you already own pointe shoes and have trained in them before, you may wear them, otherwise please wear flat shoes.
+                            Variations is an hour long ballet class focused on learning variations (solo dances by characters) from classical ballets. Throughout the year, we will learn several variations and choose one or two to perform in the recital as a group. The class will begin with a short warm-up barre, and then the rest of the class will be focused on learning the variation. This class is more appropriate for students in advanced ballet, as the pace of the class will be semi-fast, but those with at least some prior ballet training are welcome.
                         </div><br>
                     </div>
                 </div>
