--- a/instructors.html
+++ b/instructors.html
@@ -113,26 +113,26 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="container-fluid">
+        <div class="container-fluid">
                 <div class="row no-gutters">
                     <div class="col-sm-3">
                         <div id="instr-photo-box">
                             <br>
-                            <img src="images/blank.png" alt="Rachel" height="150px" width="150px">
+                            <img src="images/rachel.jpg" alt="Rachel" height="150px" width="150px">
                         </div>
                     </div>
                     <div class="col-sm-9">
                         <div id="instr-text-box">
                             <div id="instr-name">
                                 <h4><b>RACHEL TOUPS</b></h4>
-                                <i>Pre-Pointe and Variations Instructor</i><br></div>
+                                <i>Variations Instructor</i><br></div>
                                 <div id="instr-desc">
-                                    waiting
+                                    Rachel is a senior majoring in Computer Science and Cognitive Science at RPI. She has been dancing ballet since she was 2 and a half, and is a volunteer teacher for the Variations class. She currently is an apprentice with the regional professional company Dance Prism in Concord, Massachusetts, and spends her weekends going home to rehearse for their upcoming shows.
                                 </div> 
                         </div>
                     </div>
                 </div>
-            </div> -->
+            </div>
         <footer>
             <center>Copyright &#169; 2019 RPI Dance Club ~ Photos by Demetrius Green</center>
         </footer>
