--- a/schedule.html
+++ b/schedule.html
@@ -62,7 +62,7 @@
                             <h6>Intermediate/Advanced Hip Hop<span style="float: right">7:30-8:30 PM</span></h6><br>
                             <center><h5><b>THURSDAY</b></h5></center>
                             <h6>Tap<span style="float: right">6:30-7:30 PM</span></h6>
-                            <h6>Pre-Pointe and Variations<span style="float: right">7:30-8:30 PM</span></h6><br>
+                            <h6>Variations<span style="float: right">7:30-8:30 PM</span></h6><br>
                             <center><h5><b>SUNDAY</b></h5></center>
                             <h6>Make-Up Classes<span style="float: right">By Necessity</span></h6>
                         </div>
