Embedded the google calendar and added a link to it

--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
             <center><h4><b>SPRING 2019 RECITAL VIDEO</b></h4></center>
             <!--Learn how to embed a video in here
         </div>-->
+        <div class="container-fluid" id="calendar">
+            <center>Check out our Google Calendar for the most up to date schedule with class cancellations and make-ups!!</center>
+            <center><iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23eca4ec&amp;ctz=America%2FNew_York&amp;src=aG50OWtiaDk3b2Z2amwzOWc2N3Y3ZXQ0czRAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%238E24AA&amp;showTitle=1&amp;showCalendars=0&amp;showPrint=0&amp;showDate=1&amp;showTz=1" style="border-width:0" width="810" height="600" frameborder="0" scrolling="no"></iframe></iframe></center>
+        </div>
         <footer>
             <center>Copyright &#169; 2019 RPI Dance Club ~ Photos by Demetrius Green</center>
         </footer>
