--- a/schedule.html
+++ b/schedule.html
@@ -48,7 +48,8 @@
                             <br>
                             <br>
                             <br>
-                            <center><i>All classes are held in the upstairs studios at the RPI Mueller Center, Room 3.</i></center><br>                            
+                            <center><i>All classes are held in the upstairs studios at the RPI Mueller Center, Room 3.</i></center>
+                            <center>Check out our <a href="https://calendar.google.com/calendar?cid=aG50OWtiaDk3b2Z2amwzOWc2N3Y3ZXQ0czRAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ">Google Calendar</a> for all class updates!</center>                            
                         </div>
                         <div id="class-times-box">
                             <center><h5><b>MONDAY</b></h5></center>
