Added store outing link and fixed link styling

--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
             <div class="row justify-content-md-center">
                 <div class="col-sm-4 mb-3" id="announcements">
                     <center><h4><b><u>ANNOUNCEMENTS</u></b></h4></center>
-                        &#9733; Classes start on <b>September 9th.</b><br>
+                        &#9733; Saratoga Dance Store Shopping Outing on <strong>November 24th</strong>!<br>
+                        <a href="https://docs.google.com/spreadsheets/d/1hjYL8UVSMWCPQJMWu02fVDQbBUnJSr5u8NYxl8hYb-A/edit#gid=0">Click here to sign up!</a><br>
                         &#9733; Classes run from September 9th to December 6th.<br>
-                        &#9733; Payment is due by the end of the second week of classes (September 20th).<br>
                 </div>
                 <div class="col-sm-4 mb-3" id="aboutus">
                     <center><h4><b><u>ABOUT US</u></b></h4></center>
@@ -107,6 +107,7 @@
                 </div>
                 <div class="col-sm-4 mb-3" id="memberinfo">
                     <center><h4><b><u>MEMBER INFO</u></b></h4></center>
+                    &#9733; ALL EXPERIENCE LEVELS ARE ENCOURAGED TO JOIN!<br>
                     &#9733; The first week of classes is FREE!<br>
                     &#9733; For RPI students the semester fee is $65 for unlimited classes.<br>
                     &#9733; For Non-RPI students the semester fee is $100 for unlimited classes.<br>
