--- a/eboard.html
+++ b/eboard.html
@@ -88,7 +88,7 @@
                             <h4><b>ANIKA STRELOW</b></h4>
                             <i>Showrunner</i><br></div>
                             <div id="off-desc">
-                                Anika is a sophomore this year majoring in math major with minors in both finance and management. Her favorite style of dance is hiphop, but she also loves ballet, contemporary, and jazz. She has been dancing for twelve years.<br>
+                                Anika is a sophomore dual majoring in math and business management. Her favorite style of dance is hip hop, but she also loves ballet, contemporary, and jazz. She has been dancing for twelve years.<br>
                                 <i>&#9733; Email: <a href="mailto:strela@rpi.edu">strela@rpi.edu</a></i>
                             </div>
                     </div>
@@ -130,7 +130,7 @@
                             <h4><b>ERICA BERTOLOZZI</b></h4>
                             <i>Webmaster</i><br></div>
                             <div id="off-desc">
-                                Erica is a junior majoring in Computer Science. Her favorite styles of dance are hip hop and contemporary. She has been dancing for six years.<br>
+                                Erica is a junior dual majoring in Computer Science and ITWS. Her favorite styles of dance are hip hop and contemporary. She has been dancing for six years.<br>
                                 <i>&#9733; Email: <a href="mailto:bertoe@rpi.edu">bertoe@rpi.edu</a></i>
                             </div> 
                     </div>
@@ -139,7 +139,7 @@
         </div>
 
         <footer>
-            <center>Copyright &#169; 2019 RPI Dance Club ~ Photos by Demetrius Green</center>
+            <center>Copyright &#169; 2020 RPI Dance Club ~ Photos by Demetrius Green</center>
         </footer>
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
