--- a/index.html
+++ b/index.html
@@ -38,15 +38,8 @@
                 </ul>
             </div>
         </nav>
-        <!-- <div class="jumbotron jumbotron-fluid">
-            <div class="container">
-                <center>DANCE CLUB FALL 2019</center>
-                <br>
-                <center>&#10507;</center>
-            </div>
-        </div> -->
         <div class="carousel-caption">
-            <h1>DANCE CLUB FALL 2019</h1>
+            <h1>DANCE CLUB SPRING 2020</h1>
             <center><a id="jump-to-info" href="#info">&#10507;</a></center>
         </div>
         <div id="carouselFade" class="carousel slide carousel-fade" data-ride="carousel">
@@ -94,9 +87,9 @@
             <div class="row justify-content-md-center">
                 <div class="col-sm-4 mb-3" id="announcements">
                     <center><h4><b><u>ANNOUNCEMENTS</u></b></h4></center>
-                        &#9733; Saratoga Dance Store Shopping Outing on <strong>November 24th</strong>!<br>
-                        <a href="https://docs.google.com/spreadsheets/d/1hjYL8UVSMWCPQJMWu02fVDQbBUnJSr5u8NYxl8hYb-A/edit#gid=0">Click here to sign up!</a><br>
-                        &#9733; Classes run from September 9th to December 6th.<br>
+                        &#9733; Classes run from January 13th to April 18th.<br>
+                        &#9733; The free week of classes is <strong>January 13th to January 16th!</strong><br>
+                        &#9733; Our recital is on April 18th from 2-4 PM at EMPAC!<br>
                 </div>
                 <div class="col-sm-4 mb-3" id="aboutus">
                     <center><h4><b><u>ABOUT US</u></b></h4></center>
@@ -125,7 +118,7 @@
             <center><iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23eca4ec&amp;ctz=America%2FNew_York&amp;src=aG50OWtiaDk3b2Z2amwzOWc2N3Y3ZXQ0czRAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%238E24AA&amp;showTitle=1&amp;showCalendars=0&amp;showPrint=0&amp;showDate=1&amp;showTz=1" style="border-width:0" width="810" height="600" frameborder="0" scrolling="no"></iframe></iframe></center>
         </div>
         <footer>
-            <center>Copyright &#169; 2019 RPI Dance Club ~ Photos by Demetrius Green</center>
+            <center>Copyright &#169; 2020 RPI Dance Club ~ Photos by Demetrius Green</center>
         </footer>
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
