--- a/instructors.html
+++ b/instructors.html
@@ -78,7 +78,7 @@
                 <div class="col-sm-3">
                     <div id="instr-photo-box">
                         <br>
-                        <img src="images/sean.jpg" alt="Sean" height="150px" width="150px">
+                        <img src="images/sean2.jpg" alt="Sean" height="150px" width="150px">
                     </div>
                 </div>
                 <div class="col-sm-9">
@@ -87,7 +87,7 @@
                             <h4><b>SEAN J. IACOPELLI</b></h4>
                             <i>Hip Hop Instructor</i><br></div>
                             <div id="instr-desc">
-                                Sean has choreographed Hip Hop since 2006. He also studied and incorporates both lyrical  and modern styles in his class. He was a former Hip-Hop Aerobics instructor (2009) and is also experienced with Jazz and Creative movement. Break-dancer/Bboy. Sean was a Hip Hop Workshop instructor for The College of Saint Rose Plumeri Complex 2014-2015 and is currently a Hip Hop Instructor for the Saratoga Performing Arts Center National Museum of Dance in Saratoga Springs.
+                                Sean has choreographed hip hop since 2006. Sean has experience in hip hop, lyrical, jazz, breaking, modern, and contemporary dance styles. Sean delivers an array of funky hip hop choreography/combinations mixing styles including locking, waving, B-boy, street and urban. Sean works with all ages and instructs a competitive dance team. He also is acting Administrative Artistic Director of a non-profit professional dance organization offering international artist exchange programs which contract directly with the City of Albany. Places he has instructed include The College of Saint Rose, Saratoga Performing Arts Center/SPAC, National Museum of Dance, Boys & Girls Club of America, Albany Police Athletic League, & Albany Dance & Fitness. He especially enjoys the confidence, character, and cultural growth that the art of dance helps bring to communities/the world. "Why not Use Dance to Help Change the World?"
                             </div>
                     </div>
                 </div>
@@ -134,7 +134,7 @@
                 </div>
             </div>
         <footer>
-            <center>Copyright &#169; 2019 RPI Dance Club ~ Photos by Demetrius Green</center>
+            <center>Copyright &#169; 2020 RPI Dance Club ~ Photos by Demetrius Green</center>
         </footer>
         
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
